--- a/apps/dashboard-app/src/app/goo/goo.scss
+++ b/apps/dashboard-app/src/app/goo/goo.scss
@@ -4,6 +4,19 @@
   width: 100%;
   height: 100%;
   transform: translateY(-4rem);
+  > svg {
+    position: 'absolute';
+    width: 0;
+    height: 0;
+  }
+}
+
+.hooks-main {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: url('#goo');
+  overflow: hidden;
 }
 
 .hooks-main > svg {
@@ -14,58 +27,55 @@
   position: absolute;
   will-change: transform;
   border-radius: 50%;
-
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   opacity: 0.6;
-}
 
-.hooks-main > div:nth-child(1) {
-  width: 120px;
-  height: 120px;
-  background: #61cdbb;
-}
+  &:nth-child(1) {
+    $size: 120px;
+    width: $size;
+    height: $size;
+    background: #61cdbb;
 
-.hooks-main > div:nth-child(2) {
-  width: 150px;
-  height: 150px;
-  background: #e8c1a0;
-}
+    &::after {
+      top: $size/6;
+      left: $size/6;
+      width: $size/3;
+      height: $size/3;
+    }
+  }
 
-.hooks-main > div:nth-child(3) {
-  width: 150px;
-  height: 150px;
-  background: #f47560;
-}
+  &:nth-child(2) {
+    $size: 180px;
+    width: $size;
+    height: $size;
+    background: #e8c1a0;
 
-.hooks-main > div::after {
-  content: '';
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.8);
-}
+    &::after {
+      top: $size/6;
+      left: $size/6;
+      width: $size/3;
+      height: $size/3;
+    }
+  }
 
-.hooks-main > div:nth-child(2)::after {
-  top: 70px;
-  left: 70px;
-  width: 70px;
-  height: 70px;
-}
+  &:nth-child(3) {
+    $size: 180px;
+    width: $size;
+    height: $size;
+    background: #f47560;
 
-.hooks-main > div:nth-child(3)::after {
-  top: 50px;
-  left: 50px;
-  width: 50px;
-  height: 50px;
-}
+    &::after {
+      top: $size/6;
+      left: $size/6;
+      width: $size/3;
+      height: $size/3;
+    }
+  }
 
-.hooks-main {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: url('#goo');
-  overflow: hidden;
+  &::after {
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.8);
+  }
 }
