added corona map, draggable list and goo

--- a/libs/ui/src/lib/elements/thumb/thumb.scss
+++ b/libs/ui/src/lib/elements/thumb/thumb.scss
@@ -1,7 +1,12 @@
 .thumb {
   border-radius: 50%;
+  width: 4em;
+  height: 4em;
   max-width: 4em;
+  vertical-align: middle;
   &.is-large {
+    width: 10em;
+    height: 10em;
     max-width: 10em;
   }
 }
