--- a/apps/dashboard-app/src/app/app.scss
+++ b/apps/dashboard-app/src/app/app.scss
@@ -1,11 +1,15 @@
 .grid {
-  > * {
+  > div {
     position: relative;
-    .card,
-    .card-content {
+    > .card,
+    > .card > .card-content {
       position: absolute;
       width: 100%;
       height: 100%;
     }
   }
+}
+
+.grid:not(:last-child) {
+  margin-bottom: 1.5rem;
 }
