--- a/apps/dashboard-app/src/app/folders/folders.scss
+++ b/apps/dashboard-app/src/app/folders/folders.scss
@@ -7,13 +7,8 @@
     flex: 1;
     margin: 1em 0;
     padding: 0.75em;
-    border: 1px solid #eee;
+    background: #f5f5f5;
     overflow: auto;
-  }
-
-  code,
-  .folders-container {
-    border-radius: 3px;
   }
 
   code {
