--- a/apps/dashboard-app/src/app/goo/goo.scss
+++ b/apps/dashboard-app/src/app/goo/goo.scss
@@ -1,9 +1,14 @@
+.goo,
+.goo-container {
+  width: 100%;
+  height: 100%;
+}
+
 .goo {
   overflow: hidden;
   position: relative;
-  width: 100%;
-  height: 100%;
   transform: translateY(-4rem);
+
   > svg {
     position: 'absolute';
     width: 0;
@@ -11,19 +16,17 @@
   }
 }
 
-.hooks-main {
+.goo-container {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  filter: url('#goo');
   overflow: hidden;
+  filter: url('#goo');
+
+  > svg {
+    display: none;
+  }
 }
 
-.hooks-main > svg {
-  display: none;
-}
-
-.hooks-main > div {
+.goo-container > div {
   position: absolute;
   will-change: transform;
   border-radius: 50%;
