--- a/apps/dashboard-app/src/app/app.scss
+++ b/apps/dashboard-app/src/app/app.scss
@@ -1,3 +1,6 @@
+.app {
+  margin-bottom: 10em;
+}
 .grid {
   > div {
     position: relative;
@@ -22,4 +25,12 @@ html,
 
 a {
   color: #61cdbb;
+}
+
+input.input:focus {
+  outline: 0;
+  border-color: #61cdbb;
+  &.is-danger {
+    border-color: #f47560;
+  }
 }
