--- a/libs/carousel/src/lib/carousel.scss
+++ b/libs/carousel/src/lib/carousel.scss
@@ -5,32 +5,18 @@
   left: 0;
   bottom: 0;
   right: 0;
-
-  .button {
-    position: absolute;
-    top: 50%;
-    transform: translate3d(0, -50%, 0);
-    z-index: 10;
-    transition: 0.3s all;
-    color: #888;
-    box-shadow: 0px 2px 30px 0px rgba(217, 217, 217, 1);
-  }
-
-  .left-button {
-    left: 0.75em;
-  }
-
-  .right-button {
-    right: 0.75em;
-  }
 }
 
 .carousel-draggable {
-  padding: 6em 8em;
   position: absolute;
   width: 100%;
   height: 100%;
   will-change: transform;
+  padding: 6em 8em;
+
+  &.is-gapless {
+    padding: 0;
+  }
 }
 
 .carousel-image {
@@ -42,6 +28,8 @@
   width: 100%;
   height: 100%;
   will-change: transform;
-  box-shadow: 0 62.5px 125px -25px rgba(50, 50, 73, 0.5),
-    0 37.5px 75px -37.5px rgba(0, 0, 0, 0.6);
+  &.is-box-shadow {
+    box-shadow: 0 62.5px 125px -25px rgba(50, 50, 73, 0.5),
+      0 37.5px 75px -37.5px rgba(0, 0, 0, 0.6);
+  }
 }
