added filter, sort, pagination

--- a/apps/tv-channels/src/app/channel-card/channel-card.scss
+++ b/apps/tv-channels/src/app/channel-card/channel-card.scss
@@ -1,5 +1,9 @@
 .channel-card {
   height: 100%;
+  transition: all 0.3s;
+  &:hover {
+    box-shadow: inset 0 0 0 1px #f14668;
+  }
   .columns {
     .column:last-child {
       min-width: 0;
