--- a/apps/tv-channels/src/app/channel-listing/channel-listing.scss
+++ b/apps/tv-channels/src/app/channel-listing/channel-listing.scss
@@ -7,8 +7,37 @@
 
 .channel-listing {
   transition: all 0.3s;
+
   &.is-loading {
     opacity: 0.8;
     pointer-events: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .channel-heading {
+    .column:not(:first-child) {
+      width: 50%;
+    }
+
+    .column:nth-child(3) {
+      text-align: right;
+    }
+
+    .column:nth-child(2) {
+      span:first-child {
+        display: none;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .channel-heading {
+    .column:nth-child(2) {
+      span:last-child {
+        display: none;
+      }
+    }
   }
 }
