--- a/libs/ui/src/lib/components/panel/panel.scss
+++ b/libs/ui/src/lib/components/panel/panel.scss
@@ -2,4 +2,13 @@
   .panel-block {
     padding: 1.5em;
   }
+
+  .panel-tabs {
+    padding: 1em 1.5em 0 1.5em;
+    a {
+      font-size: 1rem;
+      padding: 0 1em 0.5em 1em;
+      color: #666;
+    }
+  }
 }
