--- a/apps/tv-channels/src/app/channel-card/channel-card.scss
+++ b/apps/tv-channels/src/app/channel-card/channel-card.scss
@@ -14,16 +14,28 @@
     }
   }
 
+  animation: fadein 0.3s, rise 0.3s;
   img {
-    animation: fadein 0.3s;
+    opacity: 0;
+    animation: fadein 0.6s forwards;
+    animation-delay: 0.3s;
   }
 }
 
 @keyframes fadein {
   from {
-    opacity: 0;
+    opacity: 0.3;
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes rise {
+  from {
+    transform: translateY(2px);
+  }
+  to {
+    transform: translateY(0px);
   }
 }
