--- a/libs/ui/src/lib/components/panel/panel.scss
+++ b/libs/ui/src/lib/components/panel/panel.scss
@@ -9,6 +9,11 @@
       font-size: 1rem;
       padding: 0 1em 0.5em 1em;
       color: #666;
+      user-select: none;
+      &:focus {
+        outline: none;
+        box-shadow: none;
+      }
     }
   }
 }
