--- a/apps/tv-channels/src/app/channel-showtimes/channel-showtimes.scss
+++ b/apps/tv-channels/src/app/channel-showtimes/channel-showtimes.scss
@@ -8,9 +8,11 @@
     }
   }
 
-  margin-bottom: 0.5em;
-
-  &:first-child {
-    font-weight: bold;
+  &.is-show-on-now {
+    &:first-child {
+      font-weight: bold;
+    }
   }
+
+  margin-bottom: 0.5em;
 }
