--- a/apps/tv-channels/src/styles.scss
+++ b/apps/tv-channels/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+html,
+body {
+  min-height: 100%;
+  background: #f5f5f5;
+}
+
 html {
   font-size: 14px;
 }
