--- a/apps/tv-channels/src/app/channel-listing/channel-listing.scss
+++ b/apps/tv-channels/src/app/channel-listing/channel-listing.scss
@@ -16,15 +16,13 @@
 
 @media only screen and (max-width: 768px) {
   .channel-heading {
-    .column:not(:first-child) {
+    .column:nth-child(1),
+    .column:nth-child(2) {
       width: 50%;
     }
 
-    .column:nth-child(3) {
-      text-align: right;
-    }
-
     .column:nth-child(2) {
+      text-align: right;
       span:first-child {
         display: none;
       }
